feat: update minecraft to 1.20.4